Enum and Int update